--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
   "manifest_version": 2,
 
-  "name": "Lithium Studio Editors Enhancement",
-  "description": "This extension aims to extend the functionality of Studio Editor text areas by adding syntax highlighting, line numbers, etc...",
-  "version": "1.0",
+  "name": "Lithium Studio Editor Enhancement",
+  "description": "Extends the functionality of Lithium Studio Editor by adding syntax highlighting, line numbers, code folding, etc...",
+  "version": "1.3",
+  "version_name" : "1.3 beta",
+  "author" : "Nico Balestra",
+  "icons" : {"128" : "icon_128.png"},
   "content_scripts": [
     {                   
       "matches": ["*://*/t5/bizapps/page/tab/community%3Astudio%3Acustom-content*",
@@ -15,20 +18,18 @@
                   "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Acommunity-style%3Awrapper*",
                   "*://*/t5/bizapps/page/tab/community%3Astudio%3Acommunity-style%3Awrapper*",
                   "*://*/t5/bizapps/page/tab/community%3Astudio%3Alayout-editor*",
-                  "*://*//t5/bizapps/bizappspage/tab/community%3Astudio%3Alayout-editor*"],
+                  "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Alayout-editor*",
+                  "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Aapi-browser*"],
       "css": ["css/codemirror.css", 
               "css/show-hint.css",
-              "css/docs.css"],
+              "css/docs.css",
+              "css/foldgutter.css"],
       "js": ["js/jquery.js",
              "js/jquery-ui.min.js",
              "js/codemirror.js",  
-             "js/brace-fold.js",    
-             "js/comment-fold.js",  
-             "js/foldcode.js",  
              "js/htmlmixed.js",  
              "js/matchbrackets.js",  
              "js/show-hint.js",  
-             "js/xml-fold.js",  
              "js/xml.js",
              "js/xml-ftl.js",  
              "js/css.js",  
@@ -37,6 +38,10 @@
              "js/matchtags.js",  
              "js/vbscript.js",  
              "js/xml-hint.js",
+             "js/foldcode.js",  
+             "js/brace-fold.js",    
+             "js/comment-fold.js",  
+             "js/xml-fold.js",  
              "js/init.js"
         ]
     }
