--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Lithium Studio Editor Enhancement",
   "description": "Extends the functionality of Lithium Studio Editor by adding syntax highlighting, line numbers, code folding, etc...",
-  "version": "1.3",
+  "version": "1.6",
   "author" : "Nico Balestra",
   "icons" : {"128" : "icon_128.png"},
   "background": {
@@ -22,7 +22,9 @@
                   "*://*/t5/bizapps/page/tab/community%3Astudio%3Acommunity-style%3Awrapper*",
                   "*://*/t5/bizapps/page/tab/community%3Astudio%3Alayout-editor*",
                   "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Alayout-editor*",
-                  "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Aapi-browser*"],
+                  "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Aapi-browser*",
+                  "*://*/t5/bizapps/bizappspage/tab/community%3Astudio%3Acommunity-style%3Acss*",
+                  "*://*/t5/bizapps/page/tab/community%3Astudio*"],
       "css": ["css/codemirror.css", 
               "css/show-hint.css",
               "css/docs.css",
