--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Lithium Studio Editor Enhancement",
   "description": "Extends the functionality of Lithium Studio Editor by adding syntax highlighting, line numbers, code folding, etc...",
-  "version": "1.6",
+  "version": "1.8",
   "author" : "Nico Balestra",
   "icons" : {"128" : "icon_128.png"},
   "background": {
@@ -28,7 +28,40 @@
       "css": ["css/codemirror.css", 
               "css/show-hint.css",
               "css/docs.css",
-              "css/foldgutter.css"],
+              "css/foldgutter.css",
+              "css/themes/3024-day.css",
+              "css/themes/3024-night.css",
+              "css/themes/ambiance-mobile.css",
+              "css/themes/ambiance.css",
+              "css/themes/base16-dark.css",
+              "css/themes/base16-light.css",
+              "css/themes/blackboard.css",
+              "css/themes/cobalt.css",
+              "css/themes/eclipse.css",
+              "css/themes/elegant.css",
+              "css/themes/erlang-dark.css",
+              "css/themes/lesser-dark.css",
+              "css/themes/mbo.css",
+              "css/themes/mdn-like.css",
+              "css/themes/midnight.css",
+              "css/themes/monokai.css",
+              "css/themes/neat.css",
+              "css/themes/neo.css",
+              "css/themes/night.css",
+              "css/themes/paraiso-dark.css",
+              "css/themes/paraiso-light.css",
+              "css/themes/pastel-on-dark.css",
+              "css/themes/rubyblue.css",
+              "css/themes/solarized.css",
+              "css/themes/the-matrix.css",
+              "css/themes/tomorrow-night-bright.css",
+              "css/themes/tomorrow-night-eighties.css",
+              "css/themes/twilight.css",
+              "css/themes/vibrant-ink.css",
+              "css/themes/xq-dark.css",
+              "css/themes/xq-light.css",
+              "css/themes/zenburn.css"
+              ],
       "js": ["js/jquery.js",
              "js/jquery-ui.min.js",
              "js/codemirror/codemirror.js",  
@@ -49,6 +82,7 @@
              "js/codemirror/xml-fold.js",  
              "js/init.js"
         ]
+
     }
   ],
   "options_page" : "options.html",
